--- a/teamplates/document_grid.html
+++ b/teamplates/document_grid.html
@@ -1,13 +1,20 @@
 {% extends "base.html" %}
 {% block title %}Документы{% endblock %}
 
-
 {% block main %}
-<div class="main">
-{% for row in document %}
-{{ row.doc_type_id }}
-{{ row.name }}
-{{ row.user_id }}
+{% for type in doctypes %}
+    <p>{{ type.name }}</p>
+    <table class="head_table">
+        {% for structure in docstructures %}
+            {% if structure.doc_type_id == type.id %}
+               <th>{{ structure.name }}</th>
+            {% endif %}
+        {% endfor %}
+        {% for field in docfield %}
+        <tr>
+            <td> {{ field.value }}</td>
+        </tr>
+        {% endfor %}
+    </table>
 {% endfor %}
-</div>
 {% endblock %}
