--- a/teamplates/grid_document.html
+++ b/teamplates/grid_document.html
@@ -1,18 +1,23 @@
 {% extends "base.html" %}
 {% block title %}Документы{% endblock %}
-
 {% block main %}
 <p class="doctype-header">{{ doctype.name }}</p>
 <a href="/form_document/{{ doctype.id }}">Добавить документ</a>
-
 <table class="doctype-table">
     {% for structure in docstructure %}
         <th>{{ structure.name }}</th>
     {% endfor %}
-    <tr>
-    {% for field in docfield %}
-        <td>{{ field.value }}</td>
+    {% for key, document in render_doc.items %}
+        <tr>
+        {% for structure in docstructure  %}
+            {% for key, field in document.items %}
+                {% if key == structure.id %}
+                    <td>{{ field }}</td>
+                {% endif %}
+            {% endfor %}
+        {% endfor %}
+        <td><a href="/delete_document/{{ doctype.id }}/{{ key }}">Xqwertyuio</a></td>
+        </tr>
     {% endfor %}
-    </tr>
 </table>
 {% endblock %}
